--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+*.iml
+*.iws
+*.ipr
+local.properties
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
+*~
+*.swp
